sidebar added , need to fix extra margin

--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,30 @@ body {
   margin-bottom: 8rem; }
 
 .sidebar {
-  background-color: orangered;
+  background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
-  grid-row: 1 / -1; }
+  grid-row: 1 / -1;
+  display: flex;
+  justify-content: center;
+  cursor: pointer; }
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 4rem; }
+  .nav-btn::before, .nav-btn::after {
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+    content: "";
+    display: block; }
+  .nav-btn::before {
+    transform: translateY(-1.5rem); }
+  .nav-btn::after {
+    transform: translateY(1.5rem); }
 
 .header {
   background-color: grey;
@@ -259,7 +280,7 @@ body {
   grid-gap: 2rem;
   align-items: center; }
   .nav__link:link, .nav__link:visited {
-    font-size: 1rem;
+    font-size: 0.7rem;
     color: #fff;
     text-decoration: none;
     font-family: "Josefin Sans", sans-serif;
