--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -13,7 +13,7 @@
 
   &__link:link,
   &__link:visited {
-    font-size: 1rem;
+    font-size: 0.7rem;
     color: #fff;
     text-decoration: none;
     font-family: $font-display;
