--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,6 +1,36 @@
-.sidebar{
-    background-color: orangered;
+.sidebar {
+  background-color: $color-primary;
 
-    grid-column: sidebar-start / sidebar-end;
-    grid-row: 1 / -1;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1 / -1;
+
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 4rem;
+
+  &::before,
+  &::after {
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+    content: "";
+    display: block;
+  }
+
+  &::before {
+    transform: translateY(-1.5rem);
+  }
+  &::after {
+    transform: translateY(1.5rem);
+  }
 }
